# Python-Poetry-Email

./: .gitignore  pyproject.toml
functions/: development.py  send_email.py
