[tool.poetry]
name = "Python-Unit-Tests"
version = "0.1.0"
description = ""
authors = ["ItsRahim <rahim1605@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
unittest = "^0.0"
python-dotenv = "^0.20.0"
py3-validate-email = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
